--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -20,7 +20,7 @@
         flex-direction: column;
         width: 100%;
         background-size: cover;
-        background: url('/Portafolio-DF/src/img/DF_Header.png') no-repeat top right;
+        background: url('/img/DF_Header.png') no-repeat top right;
         align-items: center;
         padding-top: 4rem;
         background-size: 50%;
