--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -13,7 +13,7 @@
     }
 
 
-
+ 
 
     &__container{
         display: flex;
@@ -43,8 +43,6 @@
 
         @include respond-below(lg){
             flex-direction: column-reverse;
-
-      
             
         }
 
@@ -58,7 +56,6 @@
             font-size: 10rem;
             line-height: 10rem;
 
- 
         }
 
         &--text{
@@ -89,6 +86,7 @@
     }
     &--description{
         font-size: 1.75rem;
+        letter-spacing: 2px;
     }
 
     }
@@ -121,8 +119,9 @@
     border-radius:1.25rem;
     padding: 0.25rem;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     width: 20rem;
+    letter-spacing: 2px;
 
 }
 
