--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*ABSTRACTS*/
 /*MEDIA QUERIES*/
 /*BASE*/
@@ -233,7 +232,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 2rem;
-  font-weight: 300;
+  font-weight: 500;
   display: none;
 }
 @media (min-width: 61em) {
@@ -527,7 +526,7 @@ body {
   font-weight: 400;
 }
 .about__title {
-  font-size: 6rem;
+  font-size: 7rem;
 }
 .about__items {
   display: -webkit-box;
@@ -848,7 +847,7 @@ body {
   padding: 0.5rem 1rem;
 }
 .projects__container--nav li.active {
-  border-bottom: 2px solid #c3006b;
+  border-bottom: 4px solid #c3006b;
 }
 .projects__container--cards {
   display: -ms-grid;
@@ -957,9 +956,9 @@ body {
   content: "";
   width: 0;
   height: 0;
-  border-top: 6px solid transparent; /* Altura del triángulo */
-  border-bottom: 6px solid transparent; /* Altura del triángulo */
-  border-left: 6px solid gray; /* Ancho y color del triángulo */
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 6px solid gray;
   position: absolute;
   left: 0;
   top: 50%;
