--- a/scss/layout/_projects.scss
+++ b/scss/layout/_projects.scss
@@ -59,7 +59,7 @@
           padding: 0.5rem 1rem;
 
           &.active{
-            border-bottom: 2px solid $principal-color ;
+            border-bottom: 4px solid $principal-color ;
           }
         }
 
@@ -166,9 +166,9 @@
               content: '';
               width: 0;
               height: 0;
-              border-top: 6px solid transparent; /* Altura del triángulo */
-              border-bottom: 6px solid transparent; /* Altura del triángulo */
-              border-left: 6px solid gray; /* Ancho y color del triángulo */
+              border-top: 6px solid transparent;
+              border-bottom: 6px solid transparent; 
+              border-left: 6px solid gray; 
               position: absolute;
               left: 0;
               top: 50%;
