--- a/scss/layout/_projects.scss
+++ b/scss/layout/_projects.scss
@@ -6,6 +6,9 @@
   padding: 4rem;
 
 
+
+
+
   @include respond-below(lg){
     display: none;
   }
@@ -90,22 +93,19 @@
   &--card{
     
     display: none;
-    width: 15rem;
+    width: 12rem;
     box-sizing: border-box;
     border-radius: 3rem;
     cursor: pointer;
     overflow: hidden;
     transition: transform 0.3s ease;
     filter: drop-shadow(0 0 10px rgba(0,0,0,0.3));
-    
-    
     padding: 0;
     margin: 0;
 
-
-    
-
-
+    @include respond-above(xs){
+      width: 15rem;
+    }
 
     
     
@@ -129,9 +129,26 @@
   
 
   @include respond-below(lg){
-    padding: 4rem;
+    // padding: 4rem;
     display: block;
     
+  }
+  &__title{
+
+    margin-top: 0;
+    padding-top: 0;
+    
+    &--info{
+      display: flex;
+      flex-direction: column;
+      font-size: 8rem;
+      line-height: 8rem;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+
+  
+  } 
   }
 
   &__container{
@@ -190,10 +207,17 @@
       }
       &--cards{
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 2rem;
+        grid-template-columns: repeat(2,1fr);
+        gap: 1rem;
         align-items: center;
         justify-items: center;
+
+        @include respond-above(sm){
+          grid-template-columns: repeat(3,1fr);
+
+        }
+
+
 
 
   
