--- a/css/main.css
+++ b/css/main.css
@@ -190,9 +190,14 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0.5rem 8rem;
+  padding: 0.5rem 2rem;
   width: 100%;
   border-bottom: 1px solid #000;
+}
+@media (min-width: 47em) {
+  .navbar {
+    padding: 0.5rem 8rem;
+  }
 }
 .navbar__menu--toggle {
   display: -webkit-box;
@@ -254,7 +259,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  padding: 5rem 0 5rem 8rem;
+  padding: 2rem 0 2rem 2rem;
   height: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -267,9 +272,14 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-@media (max-width: 74em) {
+@media (min-width: 47em) {
   .header {
-    padding-bottom: 0;
+    padding: 5rem 0 0 8rem;
+  }
+}
+@media (min-width: 74em) {
+  .header {
+    padding-bottom: 5rem;
   }
 }
 .header__container {
@@ -323,8 +333,14 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-size: 10rem;
-  line-height: 10rem;
+  font-size: 7rem;
+  line-height: 7rem;
+}
+@media (min-width: 47em) {
+  .header__info--title {
+    font-size: 10rem;
+    line-height: 10rem;
+  }
 }
 .header__info--text {
   display: -webkit-box;
@@ -345,8 +361,14 @@ body {
   line-height: 4rem;
 }
 .header__info--description {
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   letter-spacing: 2px;
+}
+@media (min-width: 36em) {
+  .header__info--description {
+    font-size: 1.75rem;
+    letter-spacing: 2px;
+  }
 }
 .header__pic {
   -webkit-box-flex: 1;
@@ -549,16 +571,17 @@ body {
 .resume__svg {
   position: absolute;
   top: 85%;
-  left: 6%;
+  left: 14%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 28%;
+  width: 50%;
   -webkit-animation: rotate 10s linear infinite;
           animation: rotate 10s linear infinite;
 }
-@media (max-width: 74em) {
+@media (min-width: 74em) {
   .resume__svg {
-    width: 50%;
+    width: 28%;
+    left: 6%;
   }
 }
 
@@ -611,12 +634,22 @@ body {
 .about__mobile__container--resp {
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 2rem 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-grid-columns: 1fr 18rem 1fr;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 18rem;
+}
+@media (min-width: 61em) {
+  .about__mobile__container--resp {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-grid-columns: 1fr 18rem 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 18rem;
+  }
 }
 .about__mobile__image {
   position: relative;
@@ -630,9 +663,9 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   gap: 2rem;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -640,12 +673,12 @@ body {
   font-size: 1.25rem;
   padding-right: 4rem;
 }
-@media (max-width: 61em) {
+@media (min-width: 61em) {
   .about__mobile__text {
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 .about__mobile__text--info {
@@ -662,7 +695,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 3rem;
+  gap: 1rem;
+}
+@media (min-width: 47em) {
+  .about__mobile__text--info {
+    gap: 3rem;
+  }
 }
 .about__mobile__text--item {
   display: -webkit-box;
@@ -680,13 +718,23 @@ body {
           justify-content: center;
 }
 .about__mobile__text--item h3 {
-  font-size: 5rem;
+  font-size: 2.5rem;
   color: #c3006b;
 }
+@media (min-width: 47em) {
+  .about__mobile__text--item h3 {
+    font-size: 5rem;
+  }
+}
 .about__mobile__text--item p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
   font-weight: 400;
+}
+@media (min-width: 47em) {
+  .about__mobile__text--item p {
+    font-size: 1.5rem;
+  }
 }
 .about__mobile__title {
   font-size: 5rem;
@@ -742,27 +790,46 @@ body {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   z-index: 0;
-  font-size: 10rem;
+  font-size: 7rem;
   color: #dadada;
   margin: 0;
+}
+@media (min-width: 47em) {
+  .services__title h2 {
+    font-size: 10rem;
+  }
 }
 .services__title h3 {
   position: relative;
   z-index: 1;
   margin: 0;
-  font-size: 3rem;
-  letter-spacing: 1.4rem;
+  font-size: 2.5rem;
+}
+@media (min-width: 47em) {
+  .services__title h3 {
+    font-size: 3rem;
+    letter-spacing: 1.4rem;
+  }
 }
 .services__container--cards {
-  gap: 4rem;
+  gap: 1rem;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  -ms-grid-columns: 1fr 1rem 1fr;
+  grid-template-columns: repeat(2, 1fr);
 }
-@media (min-width: 61em) {
+@media (min-width: 47em) {
   .services__container--cards {
-    -ms-grid-columns: (1fr)[4];
+    -ms-grid-columns: 1fr 4rem 1fr 4rem 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4rem;
+  }
+}
+@media (min-width: 74em) {
+  .services__container--cards {
+    -ms-grid-columns: 1fr 2rem 1fr 2rem 1fr 2rem 1fr;
     grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
   }
 }
 
@@ -876,7 +943,7 @@ body {
 }
 .projects--card {
   display: none;
-  width: 15rem;
+  width: 12rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 3rem;
@@ -890,6 +957,11 @@ body {
           filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
   padding: 0;
   margin: 0;
+}
+@media (min-width: 36em) {
+  .projects--card {
+    width: 15rem;
+  }
 }
 .projects--card img {
   -o-object-fit: contain;
@@ -907,9 +979,30 @@ body {
 }
 @media (max-width: 74em) {
   .projects__mobile {
-    padding: 4rem;
     display: block;
   }
+}
+.projects__mobile__title {
+  margin-top: 0;
+  padding-top: 0;
+}
+.projects__mobile__title--info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 8rem;
+  line-height: 8rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 2rem;
 }
 .projects__mobile__container {
   display: -ms-grid;
@@ -974,12 +1067,19 @@ body {
 .projects__mobile__container--cards {
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 2rem;
+  -ms-grid-columns: 1fr 1rem 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   justify-items: center;
+}
+@media (min-width: 47em) {
+  .projects__mobile__container--cards {
+    -ms-grid-columns: (1fr)[3];
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .mobile__navbar--arrow {
@@ -1050,17 +1150,28 @@ body {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   z-index: 0;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   color: #dadada;
   white-space: nowrap;
-  letter-spacing: 1rem;
+  letter-spacing: 0.75rem;
+}
+@media (min-width: 47em) {
+  .footer__title h3 {
+    font-size: 2.5rem;
+    letter-spacing: 1rem;
+  }
 }
 .footer__title h2 {
   position: relative;
   z-index: 1;
   margin: 0;
-  font-size: 5rem;
+  font-size: 3.5rem;
   letter-spacing: 1rem;
+}
+@media (min-width: 47em) {
+  .footer__title h2 {
+    font-size: 5rem;
+  }
 }
 .footer__logo {
   width: 2.75rem;
@@ -1195,11 +1306,23 @@ body {
   color: #c3006b;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 20rem;
-  max-height: 20rem;
+  width: 12rem;
+  max-height: 12rem;
+}
+@media (min-width: 36em) {
+  .card {
+    width: 15rem;
+    max-height: 15rem;
+  }
+}
+@media (min-width: 47em) {
+  .card {
+    width: 20rem;
+    max-height: 20rem;
+  }
 }
 .card--text {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 400;
   color: #000;
   display: -webkit-box;
@@ -1215,6 +1338,11 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+@media (min-width: 36em) {
+  .card--text {
+    font-size: 1.5rem;
+  }
 }
 .card img {
   -o-object-fit: contain;
