--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -9,18 +9,36 @@
   color: $principal-color;
 
   box-sizing: border-box;
-  width: 20rem;
-  max-height: 20rem;
+  width: 12rem;
+  max-height: 12rem;
 
+
+
+  @include respond-above(xs){
+    width: 15rem;
+    max-height: 15rem;
+  }
+
+  @include respond-above(sm){
+    width: 20rem;
+    max-height: 20rem;
+
+  }
+ 
 
   &--text{
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
     color: #000;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @include respond-above(xs){
+      font-size: 1.5rem;
+
+    }
 
   }
   img{
