--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -41,10 +41,18 @@
       top: 50%;
       transform: translateY(-50%);
       z-index: 0;
-      font-size: 2.5rem;
+      font-size: 1.5rem;
       color: $gray-text;
       white-space: nowrap;
-      letter-spacing: 1rem;
+      letter-spacing: 0.75rem;
+
+      @include respond-above(sm){
+        font-size: 2.5rem;
+        letter-spacing: 1rem;
+
+      }
+
+      
 
     }
 
@@ -52,8 +60,13 @@
       position: relative;
       z-index: 1;
       margin: 0;
-      font-size: 5rem;
+      font-size: 3.5rem;
       letter-spacing: 1rem;
+
+      @include respond-above(sm){
+        font-size: 5rem;
+
+      }
 
 
 
