--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -2,9 +2,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 8rem;
+    padding: 0.5rem 2rem;
     width: 100%;
     border-bottom: 1px solid #000;
+
+    @include respond-above(sm){
+        padding: 0.5rem 8rem;
+
+    }
 
     &__menu--toggle{
         display: flex;
