--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -18,17 +18,26 @@
       top: 50%;
       transform: translateY(-50%);
       z-index: 0;
-      font-size: 10rem;
+      font-size: 7rem;
       color: $gray-text;
       margin: 0;
+
+      @include respond-above(sm){
+        font-size: 10rem;
+
+      }
     }
 
     h3{
       position: relative;
       z-index: 1;
       margin: 0;
-      font-size: 3rem;
-      letter-spacing: 1.4rem;
+      font-size: 2.5rem;
+      @include respond-above(sm){
+        font-size: 3rem;
+        letter-spacing: 1.4rem;
+
+      }
 
 
     }
@@ -38,20 +47,27 @@
   &__container{
 
     &--cards{
-      gap: 4rem;
+      gap: 1rem;
       // display: flex;
       // flex-wrap: wrap;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+      grid-template-columns: repeat(2,1fr);
 
-
-      @include respond-above(md){
-
-
-        grid-template-columns: repeat(4,1fr);
+      @include respond-above(sm){
+        grid-template-columns: repeat(3,1fr);
+        gap: 4rem;
 
         
       }
+
+      @include respond-above(lg){
+        grid-template-columns: repeat(4,1fr);
+        gap: 2rem;
+
+
+        
+      }
+
 
     }
   }
