--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,4 +27,5 @@
 
 /*PAGES*/
 @import "pages/index";
-@import "pages/project-details"
+@import "pages/project-details";
+@import "pages/project-details-vigil";
