--- a/scss/pages/_project-details-vigil.scss
+++ b/scss/pages/_project-details-vigil.scss
@@ -15,12 +15,20 @@
   align-items: center;
   padding: 2rem;
   box-sizing: border-box;
+  height: 100%;
 
 
   
 
 
 }
+
+.content__video{
+
+  width: 95%;
+}
+
+
 
 
 .navbar--vigil{
