--- a/css/main.css
+++ b/css/main.css
@@ -1447,3 +1447,28 @@ body {
   position: fixed;
   z-index: 1000;
 }
+
+.project__detail--lvba {
+  width: 74%;
+  margin-left: 26%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 100%;
+}
+
+.content__section--lvba {
+  width: 100%;
+}
