--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,3 +29,4 @@
 @import "pages/index";
 @import "pages/project-details";
 @import "pages/project-details-vigil";
+@import "pages/project-details-lvba";
