--- a/scss/pages/_project-details-vigil.scss
+++ b/scss/pages/_project-details-vigil.scss
@@ -23,9 +23,14 @@
 
 }
 
-.content__video{
+.content__video--lvba{
   margin-left: -2px;
   width: 101%;
+}
+
+.content__video{
+
+  width: 95%;
 }
 
 
