--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,3 +30,4 @@
 @import "pages/project-details";
 @import "pages/project-details-vigil";
 @import "pages/project-details-lvba";
+@import "pages/project-details-avant";
