--- a/css/main.css
+++ b/css/main.css
@@ -953,9 +953,9 @@ body {
   width: 12rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border-radius: 3rem;
+  border-radius: 1.5rem;
   cursor: pointer;
-  overflow: hidden;
+  overflow: visible;
   -webkit-transition: -webkit-transform 0.3s ease;
   transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
@@ -971,10 +971,11 @@ body {
   }
 }
 .projects--card img {
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: auto;
+  border-radius: 1.5rem;
 }
 .projects--card:hover {
   -webkit-transform: scale(1.1);
@@ -1502,28 +1503,42 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 2rem;
+  padding: 0rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   height: 100%;
 }
 
-.content__image--avant {
-  width: full;
+.content__section--avant {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
 }
-.content__image--avant img {
-  width: auto;
+
+.content__image--avant {
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  display: block;
+  margin-bottom: 0;
+  line-height: 0;
 }
 
-.content__video--lvba {
-  margin-left: -2px;
-  width: 101%;
-}
-
-.content__video {
-  width: 95%;
+.content__video--avant {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: -2px;
 }
 
 .navbar--vigil {
