--- a/scss/layout/_projects.scss
+++ b/scss/layout/_projects.scss
@@ -95,9 +95,9 @@
 
     width: 12rem;
     box-sizing: border-box;
-    border-radius: 3rem;
+    border-radius: 1.5rem;
     cursor: pointer;
-    overflow: hidden;
+    overflow: visible;
     transition: transform 0.3s ease;
     filter: drop-shadow(0 0 10px rgba(0,0,0,0.3));
     padding: 0;
@@ -111,9 +111,10 @@
     
 
     img{
-      object-fit: contain;
+      object-fit: cover;
       width: 100%;
       height: auto;
+      border-radius: 1.5rem;
       
       }
         &:hover {
