--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -23,7 +23,7 @@
         flex-direction: column;
         width: 100%;
         background-size: cover;
-        background: url("https://danielisflores.github.io/portfolioDF/img/DF_Header2.png") no-repeat top right;
+        background: url('/img/DF_Header2.png') no-repeat top right;
         align-items: center;
         padding-top: 4rem;
         background-size: 50%;
